2009-01-17  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedelegatemodule.vala:

	Fix wrapper for delegates returning arrays, fixes bug 564474

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am:
	* vapi/lua.vapi:

	Add Lua binding, patch by pancake and Phil Housley,
	fixes bug 540820

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapi/gsl.vapi:

	Fix delegate bindings, patch by Matías De la Puente

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagirparser.vala:

	Parse callback parameter annotations

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/valamarkupreader.vala:

	Fix infinite loop when reading entity references

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/valamarkupreader.vala:

	Read comments

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_widget_create_pango_* bindings

	* vapi/gtk+-2.0.vapi: regenerated

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaobjectcreationexpression.vala:

	Set formal_target_type to fix constructors using generic parameter
	types, fixes bug 543477

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodememberaccessmodule.vala:

	Do not try to convert from generic pointer twice when accessing
	generic field

	* vala/valaassignment.vala:

	Set formal_target_type to fix assignment to generic fields,
	fixes bug 543486

2009-01-17  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gstreamer-0.10/gstreamer-0.10-custom.vala:

	Add missing bindings for GstValue. fixes bug 530812

	* vapi/gstreamer-0.10.vapi: Regenerated

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbol.vala:

	Fix determining relative accessibility, fixes bug 559798

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vala/valacreationmethod.vala:

	Fix bogus errors about missing return type in creation methods,
	fixes bug 564178

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Use correct cname when calling property set accessor,